snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.md5
3b3f1093dcae78bb5042fa2947ed9974